Modified submit button

--- a/templates/results.html
+++ b/templates/results.html
@@ -26,7 +26,7 @@
             </div>
         {% endfor %}
         <a href="{{ url_for('download_report') }}" class="btn waves-effect waves-light">Download Report
-            <i class="material-icons right">file_download</i>
+            <!-- <i class="material-icons right">file_download</i> -->
         </a>
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
