--- a/templates/review_choice.html
+++ b/templates/review_choice.html
@@ -23,7 +23,7 @@
                 </label>
             </p>
             <button class="btn waves-effect waves-light" type="submit">Submit
-                <i class="material-icons right">send</i>
+                <!-- <i class="material-icons right">send</i> -->
             </button>
         </form>
     </div>
