--- a/templates/review.html
+++ b/templates/review.html
@@ -38,7 +38,7 @@
                 </div>
             {% endfor %}
             <button class="btn waves-effect waves-light" type="submit">Submit
-                <i class="material-icons right">send</i>
+                <!-- <i class="material-icons right">send</i> -->
             </button>
         </form>
     </div>
